--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <div class="logo">Ігор Пилипчак</div>
     <nav>
       <a href="index.html">Головна</a>
-      <a href="portfolio.html">Портфоліо</a>
+      <a href="portfolio1.html">Портфоліо</a>
       <a href="contact.html" class="active">Контакти</a>
     </nav>
   </header>
