--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="logo"><strong>Ігор Пилипчак</strong></div>
     <nav>
       <a href="index.html" class="active"><strong>Головна</strong></a>
-      <a href="portfolio.html">Портфоліо</a>
+      <a href="portfolio1.html">Портфоліо</a>
       <a href="contact.html">Контакти</a>
     </nav>
   </header>
