--- a/portfolio1.html
+++ b/portfolio1.html
@@ -28,7 +28,7 @@ function searchProject() {
     <div class="logo">Ігор Пилипчак</div>
     <nav>
       <a href="index.html">Головна</a>
-      <a href="portfolio.html" class="active">Портфоліо</a>
+      <a href="portfolio1.html" class="active">Портфоліо</a>
       <a href="contact.html">Контакти</a>
     </nav>
   </header>
